<!--
  Copyright 2014 Google, Inc
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
      http://www.apache.org/licenses/LICENSE-2.0
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>
    <string name="app_name">Location Updates ForegroundService</string>

    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Turn Tracker On</string>
    <string name="remove_location_updates">Turn Tracker Off</string>
    <string name="invalid_number">Invalid number</string>
    <string name="toast_prefs_restart">Don\'t forget to restart tracking!</string>
    <string name="hint_url">http(s)://server/path</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="text_legend_url_0">Send GPS coordinates to :</string>
    <string name="text_legend_url_1">Example: http://herverenault.fr/gps</string>
    <string name="text_legend_url_2">Latitude and longitude added automatically</string>
    <string name="text_legend_url_3">as in http://herverenault.fr/gps?lat=…&amp;lon=…</string>

    <string name="action_sign_in_short">Register</string>
    <string name="action_settings">Settings</string>
    <string name="button_toggle_on">Turn Tracker Off</string>
    <string name="button_toggle_off">Turn Tracker On</string>
    <string name="desc_logo">Logo</string>
    <string name="error_malformed_url">Invalid URL</string>
    <string name="error_unknown_host">Unknown host or network down</string>
    <string name="error_ssl">HTTPS connexion problem</string>
    <string name="error_timeout">HTTP timeout</string>
    <string name="http_request_ok">OK</string>
    <string name="http_request_failed">failed</string>
    <string name="last_location_sent_at">Last location sent at</string>
    <string name="text_gps_status">Unknown GPS status</string>
    <string name="text_gps_status_enabled">GPS enabled</string>
    <string name="text_gps_status_disabled">Warning! GPS disabled!</string>
    <string name="text_network_status">Unknown network status</string>
    <string name="text_network_status_enabled">Network enabled</string>
    <string name="text_network_status_disabled">Warning! Network disabled!</string>
    <string name="text_running_since">Running since</string>
    <string name="toast_service_running">Tracker is on</string>
    <string name="toast_service_stopped">Tracker is off</string>
    <string name="text_stopped_on">Stopped on</string>
    <string name="text_killed">Android killed the application</string>
    <string name="waiting_for_gps_data">Waiting for GPS data</string>

    <string name="pref_gps_updates">GPS Updates (seconds)</string>
    <string name="pref_gps_updates_summary">Update GPS position approximately every… (5 seconds minimum)</string>
    <string name="pref_gps_updates_too_low">Sorry, this value is too low.</string>
    <string name="pref_gps_updates_too_high">Sorry, this value is greater than max run time.</string>
    <string name="pref_gps_updates_battery_drain">Watch out! Values below 30s can drain your battery.</string>
    <string name="pref_max_run_time">Max run time (hours)</string>
    <string name="pref_max_run_time_summary">(defaults to 8 hours)</string>
    <string name="pref_max_run_time_too_low">Sorry, this value is lower than GPS updates.</string>
    <string name="pref_timestamp">Timestamp on each request</string>
    <string name="pref_timestamp_summary">Add t=(milliseconds) to the parameters</string>
    <string name="pref_gps_awake">Keep GPS awake</string>
    <string name="pref_gps_awake_explain">More accurate but uses more power</string>
    <string name="pref_geofence">Turn on GeoFence</string>
    <string name="pref_geofence_explain">Geofence around cabin</string>
    <string name="pref_user_name">User name</string>
    <string name="pref_user_name_summary">Enter the name of the user</string>

    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_invalid_type">Geofence transition error: invalid transition type %1$d </string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="unknown_geofence_error">Unknown error: the Geofence service is not available now</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

</resources>
