<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<EditTextPreference
			android:key="pref_max_run_time"
			android:inputType="numberDecimal"
			android:title="@string/pref_max_run_time"
			android:summary="@string/pref_max_run_time_summary"
			android:defaultValue="8" />

	<CheckBoxPreference
			android:key="pref_timestamp"
			android:title="@string/pref_timestamp"
			android:summary="@string/pref_timestamp_summary"
			android:defaultValue="true" />

	<EditTextPreference
			android:key="pref_user_id"
			android:inputType="text"
			android:title="@string/pref_user_name"
			android:summary="@string/pref_user_name_summary"
			android:defaultValue="Dee" />

	<EditTextPreference
			android:key="pref_gps_updates"
			android:inputType="number"
			android:title="@string/pref_gps_updates"
			android:summary="@string/pref_gps_updates_summary"
			android:defaultValue="30" />

	<CheckBoxPreference
			android:key="pref_accuracy"
			android:title="@string/pref_gps_awake"
			android:summary="@string/pref_gps_awake_explain"
			android:defaultValue="false" />

	<CheckBoxPreference
			android:key="pref_geofence"
			android:title="@string/pref_geofence"
			android:summary="@string/pref_geofence_explain"
			android:defaultValue="false" />

</PreferenceScreen>