<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="com.google.android.gms.location.sample.locationupdatesforegroundservice.MainActivity"
                tools:showIn="@layout/activity_main">

	<LinearLayout
			android:id="@+id/focus_remover"
			android:layout_width="0px"
			android:layout_height="0px"
			android:focusable="true"
			android:focusableInTouchMode="true"
			android:orientation="horizontal"/>

	<EditText
			android:id="@+id/edit_url"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/text_legend_url_0"
			android:ems="10"
			android:hint="@string/hint_url"
			android:inputType="textUri"
			android:nextFocusLeft="@id/edit_url"
			android:nextFocusUp="@id/edit_url">

		<requestFocus/>
	</EditText>

	<TextView
			android:id="@+id/text_legend_url_1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/edit_url"
			android:layout_centerHorizontal="true"
			android:text="@string/text_legend_url_1"
			android:textAppearance="?android:attr/textAppearanceSmall"/>

	<TextView
			android:id="@+id/text_legend_url_2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/text_legend_url_1"
			android:layout_centerHorizontal="true"
			android:text="@string/text_legend_url_2"
			android:textAppearance="?android:attr/textAppearanceSmall"/>

	<TextView
			android:id="@+id/text_legend_url_3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/text_legend_url_2"
			android:layout_centerHorizontal="true"
			android:text="@string/text_legend_url_3"
			android:textAppearance="?android:attr/textAppearanceSmall"/>

	<TextView
			android:id="@+id/text_legend_url_0"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:text="@string/text_legend_url_0"
			android:textAppearance="?android:attr/textAppearanceMedium"/>

	<TextView
			android:id="@+id/text_network_status"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/text_legend_url_3"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="24dp"
			android:text="@string/text_network_status"/>

	<TextView
			android:id="@+id/text_gps_status"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/text_network_status"
			android:layout_centerHorizontal="true"
			android:text="@string/text_gps_status"/>

	<ToggleButton
			android:id="@+id/button_toggle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/text_gps_status"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="5dp"
			android:width="150sp"
			android:height="60sp"
			android:checked="false"
			android:onClick="onToggleClicked"
			android:textAppearance="@style/TextAppearance.AppCompat"
			android:textOff="@string/button_toggle_off"
			android:textOn="@string/button_toggle_on"
			android:textStyle="normal|bold"/>

	<TextView
			android:id="@+id/text_running_since"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/button_toggle"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="10dp"
			android:text=""
			android:textAppearance="?android:attr/textAppearanceSmall"/>

	<TextView
			android:id="@+id/last_server_response"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/text_running_since"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="10dp"
			android:gravity="center"
			android:text=""
			android:textAppearance="?android:attr/textAppearanceSmall"/>

	<ImageView
			android:id="@+id/logo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/last_server_response"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="10dp"
			android:contentDescription="@string/desc_logo"
			android:src="@mipmap/ic_launcher"/>

</RelativeLayout>